Changes for DateTime::Set

- fixed max/min of an infinite SpanSet
- added test for infinite duration

- from_recurrence() code cleanup

- parameter checking: The 'dates' argument to from_datetimes() 
  must be a list of DateTime objects

0.1601  2004-03-30
- more parameter checking;
  Sets should interoperate better with objects of 
  type DateTime::Event::* and DateTime::Incomplete

0.16  2004-03-29
- Makefile.PL skips processing of "Build.PL"
  Reported by Reinhold May

0.15  2004-03-28
  
  [ ENHANCEMENTS from version 0.14 ]

- Both "Makefile.PL" and "Build.PL" are provided.

- New methods:
  DateTime::SpanSet::current
  DateTime::Spanset::closest
  DateTime::Set::map / grep
  DateTime::SpanSet::map / grep
  DateTime::SpanSet::intersected_spans
  DateTime::SpanSet::start_set / end_set 

- Recurrences can be bounded sets.

- Recurrences can be as small as 1 nanosecond.

- DateTime::SpanSet::duration may return an 'infinite' 
  DateTime::Duration (instead of scalar infinity).

  [ *** BACKWARDS INCOMPATIBILITIES from version 0.14 *** ]

- The next/previous functions used in DT::Set->from_recurrence()
  MUST work with DateTime::Infinite::Future
  and DateTime::Infinite::Past parameters. 

  Failing to test for "infinity" values is known
  to cause an infinite loop in some modules.

- DateTime::Set and DateTime::SpanSet methods do not mutate the set.
  This was the behaviour in version 0.13

0.1413  2004-03-28
- detect_bounded => 1 is deprecated.

0.1412  2004-03-28
- DateTime::Set->from_recurrence - Bounded recurrences are "optional".
  use " detect_bounded => 1 " to turn them on.
  This fixes the backwards incompatibilities created by version 0.1402.

0.1411  2004-03-27
- Makefile.PL.  Suggested by Randal L. Schwartz.

0.1410  2004-03-26
- Build.PL

0.1409  2004-03-23
- evaluation of bounded recurrences is "lazier".
  (DateTime::Incomplete tests are twice as fast)

0.1408  2004-03-22
- refactored S::I::_recurrence class:
  it doesn't use "current" anymore; 